@@ -71,9 +71,6 @@
 
     <!-- Reproducible Builds -->
     <project.build.outputTimestamp>1783551320</project.build.outputTimestamp>
-
-    <!-- Surefire Arglines -->
-    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
   </properties>
 
   <dependencies>
